Updated file with Demo Content

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,3 +3,5 @@ ng test # for testing unit test
 ng serve -- #for Serving the Angular app
 
 ## Test File to demo 
+### DEMO TESTING ####
+### DEVSECOPS ####
